# sp1ny

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  compare_precomputed_coefficients.py  environment.yaml  environment.yml  helper_plot.py  plot_neurograms.py  pyproject.toml  setup.py  spiny.pyproject  visualize.py
alignment/: htk_lab.py  textgrid.py
examples/: arctic_as.neur  arctic_nat.neur
gui/: comparison_area.py  docks.py  one_shot.py  plot_area.py  segment.py  widgets.py
pyprag/: main.py  pypraaqt.py  pyprag.py  ui.py
pyprag/annotation/: htk_lab.py  textgrid.py
pyprag/annotations/: __init__.py  control.py  model.py  visualisation.py
pyprag/annotations/io/: __init__.py  htk_lab.py  textgrid.py
pyprag/audio/: __init__.py  player.py
pyprag/components/annotations/: __init__.py  visualisation.py
pyprag/components/data/: visualisation.py
pyprag/components/spectrum/: core.py
pyprag/components/wav/: control.py  player.py  visualisation.py
pyprag/core/: __init__.py  plugin_management.py
pyprag/core/data/: __init__.py  control.py  visualisation.py
pyprag/core/spectrum/: control.py
pyprag/core/wav/: __init__.py  control.py  player.py  visualisation.py
pyprag/data/: visualisation.py
pyprag/gui/: __init__.py  comparison_area.py  docks.py  items.py  one_shot.py  tmp.py  utils.py  widgets.py
pyprag/gui/control_panels/: signal.py
pyprag/plugins/spectrum/: __init__.py  control.py  extractor.py  visualisation.py
pyprag/plugins/spectrum_praat/: __init__.py  control.py  visualisation.py
pyprag/plugins/wavelet/: __init__.py  control.py  extractor.py  visualisation.py
pyprag/sig_proc/: __init__.py  spectrum.py
pyprag/wav/: __init__.py  control.py  visualisation.py
spiny/: main.py  ui.py
spiny/annotations/: __init__.py  control.py  model.py  visualisation.py
spiny/annotations/io/: __init__.py  htk_lab.py  (+2 more)
spiny/core/: __init__.py  segment.py
spiny/gui/: docks.py  items.py  theme.py  utils.py  widgets.py
spiny/raw_data/: control.py  extractor.py  visualisation.py
to_sort/: compare_precomputed_coefficients.py
(+25 files in other folders)
